--- a/CarsCrete/appsettings.json
+++ b/CarsCrete/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB; InitialCatalog=CarsCrete; Integrated Sequrity=True; MultipleActiveResultSets=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
