--- a/CarsCrete/appsettings.json
+++ b/CarsCrete/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB; InitialCatalog=CarsCrete; Integrated Sequrity=True; MultipleActiveResultSets=True"
+    "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB; Initial Catalog=CarsCrete; Integrated Security=True; MultipleActiveResultSets=True"
   },
   "Logging": {
     "LogLevel": {
