--- a/CarsCrete/ClientApp/package.json
+++ b/CarsCrete/ClientApp/package.json
@@ -31,6 +31,7 @@
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
+    "ng2-file-upload": "^1.3.0",
     "rxjs": "^6.3.3",
     "zone.js": "~0.8.26"
   },
