--- a/CarsCrete/ClientApp/package.json
+++ b/CarsCrete/ClientApp/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser-dynamic": "7.0.0",
     "@angular/platform-server": "7.0.0",
     "@angular/router": "7.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^4.0.0",
     "@nguniversal/module-map-ngfactory-loader": "^5.0.0-beta.5",
     "@ngx-translate/core": "^10.0.2",
     "@ngx-translate/http-loader": "^3.0.1",
